missymaloney css display exercise

--- a/display-exercise.html
+++ b/display-exercise.html
@@ -15,8 +15,14 @@
   <!-- your styles will go in display-page.css -->
   <link rel="stylesheet" type="text/css" href="styles/display-page.css">
 </head>
-<body>
-<!-- your HTML here to implement the colored box design -->
-	<p>Placeholder!</p>
+  <main>
+     <div class="box">
+      <div class="upperbox greenbox"></div>
+      <div class="upperbox bluebox"></div><p>
+      <div class="lowerbox graybox"'></div>
+      <div class="lowerbox blackbox"></div>
+      <div class="lowerbox orangebox"></div>
+     </div>
+  </main>
 </body>
 </html>
