--- a/position-exercise.html
+++ b/position-exercise.html
@@ -17,18 +17,26 @@
   <link rel="stylesheet" type="text/css" href="styles/position-page.css">
 </head>
 <body>
+
   <!-- To finish the design, the HTML for the nav requires no additional elements, just the right CSS -->
   <nav>
-    <img src="images/icon.png">
-    <ul>
+    <img src="images/icon.png" class='logo'>
+    <span><a href="index.html">Home</a>  |  <a href="display-exercise.html">display</a>  |  <a href="float-exercise.html">float</a></span>
+    <!--<ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="display-exercise.html">display</a></li>
       <li><a href="float-exercise.html">float</a></li>
-    </ul>
+    </ul> -->
   </nav>
 
   <main>
-    <!-- Put the HTML you need to accomplish the design -->
+    <div id="bg"><img src="images/outerspace_landscape.jpeg" id="bg"></img></div>
+    <div class="parent">
+      <div class="dottedbox"></div>
+      <div><img src="images/spacecat.png" class="catimg"></img></div>
+      <div><img src="images/spacedog.png" class="dogimg"></img></div>
+
+    </div>
   </main>
 </body>
 </html>
